[package]
name = "logto-sdk"
version = "0.1.0"
authors = ["Bjorn Beishline"]
license = "MIT OR Apache-2.0"
edition = "2024"
homepage = "https://logto.io/"
repository = "https://github.com/BjornTheProgrammer/logto-sdk"
description = "Unofficial Logto SDK for Rust with support for axum, actix, and rocket"
readme = "README.md"
keywords = ["logto", "sdk", "axum", "actix", "rocket"]
categories = ["api-bindings", "authentication"]

[lib]
path = "src/lib.rs"

[features]
default = ["management-api", "jwt", "auth-client"]

management-api = ["auth-client"]
auth-client = []

axum = ["jwt", "dep:axum"]
actix-web = ["jwt", "dep:actix-web", "dep:futures"]
rocket = ["jwt", "dep:rocket"]

jwt = ["dep:jsonwebtoken"]

[dependencies]
axum = { version = "0.8", optional = true }
actix-web = { version = "4", optional = true }
rocket = { version = "0.5", optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = { version = "10", optional = true }

futures = { version = "0.3", optional = true }
reqwest = { version = "0.13", features = ["json", "form"] }
thiserror = "2"
