[workspace]
resolver = "3"

members = ["crates/*", "examples/*"]
default-members = ["crates/logto-sdk"]

[workspace.package]
authors = ["Bjorn Beishline"]
license = "MIT OR Apache-2.0"
edition = "2024"
homepage = "https://logto.io/"
repository = "https://github.com/BjornTheProgrammer/logto-sdk"

[workspace.dependencies]
axum = { version = "0.8" }
actix-web = { version = "4" }
rocket = { version = "0.5" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = { version = "10" }

futures = { version = "0.3" }
reqwest = { version = "0.13", features = ["json", "form"] }
thiserror = "2"

# For the examples
tokio = { version = "1.0", features = ["full"] }
