[package]
name = "logto-grant-token"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
logto-sdk = { path = "../../crates/logto-sdk", features = ["axum"] }
tokio = { workspace = true }
